--- a/Shop.csproj
+++ b/Shop.csproj
@@ -10,8 +10,9 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Data\Mocks\" />
+    <Folder Include="Data\Interfaces\" />
     <Folder Include="Views\" />
-    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
